<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pauline.mygame.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/title_text_view"
            android:text="@string/title"
            android:editable="true"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:paddingTop="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/subtitle_text_view"
            android:text="@string/subtitle"
            android:editable="true"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:paddingBottom="25dp"/>

        <!-- About -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Column 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/about_author_str1"
                    android:checked="true"
                    android:padding="15px"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/about_font_str"
                    android:checked="true"
                    android:padding="15px"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <!-- Column 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/about_author_str2"
                    android:checked="true"
                    android:padding="15px"
                    android:gravity="center_vertical"
                    android:layout_gravity="left"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="- Blocked (Creative Commons Attribution Share Alike license by Sabata),\n- Kristen ITC (Copyright (c) International Typeface Corporation 199),\n- Bauhaus 93 (URW++)"
                    android:checked="true"
                    android:padding="15px"
                    android:gravity="left|center_vertical"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
