<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pauline.mygame.MainMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
    <!--android:background="@drawable/background_repeat">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:src="@drawable/title"/>

        <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/play"
            android:onClick="openGame"
            android:background="#00ffffff" />-->

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/button_play_str"
            android:id="@+id/play_button"
            android:layout_gravity="center_horizontal"
            android:onClick="openGame"
            android:textColor="#ffffff"
            android:background="@drawable/button_bottom_border" />

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/button_settings_str"
            android:id="@+id/settings_button"
            android:layout_gravity="center_horizontal"
            android:onClick="openSettings"
            android:textColor="#ffffff"
            android:background="@drawable/button_bottom_border" />

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/button_exit_str"
            android:id="@+id/exit_button"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:background="#00ffffff" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_menu_background"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</RelativeLayout>